# Aurora-Locus

./: .env  .env.example  .gitignore  ADMIN_CREDENTIALS.md  ADMIN_ENDPOINTS_ISSUE.md  ADMIN_PANEL_ACCESS.md  ADMIN_PANEL_FIXES.md  ADMIN_PANEL_REAL_DATA_UPDATE.md  ADMIN_PANEL_SESSION_FIX.md  ARCHITECTURE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FEDERATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  INTEROP_TEST_REPORT.md  PHASE2_TEST_RESULTS.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_PROGRESS.md  PHASE6_PROGRESS.md  PHASE7_PROGRESS.md  PHASE8_PROGRESS.md  QUICKSTART.md  README.md  REBUILD_PLAN.md  SETUP.md  STATUS.md  admin_login.bat  check_sessions.sql  create-account.sh  create_admin.sql  create_admin_account.bat  docker-compose.yml  fix_admin_role.sql  fix_admin_table.sql  fix_dates.sql  fix_schema.sql  grant_admin.sql  (+8 more)
Rust-Atproto-SDK/src/oauth/: client.rs  dpop.rs
data/: account.sqlite-shm  account.sqlite-wal
docs/: ADMIN_PANEL.md  BACKUP_RECOVERY.md  FEDERATION.md  SCALABILITY.md
migrations/: 20250101000001_init_account.sql  20250102000001_actor_store_schema.sql  20250103000001_blob_metadata.sql  20250104000001_sequencer.sql  20250105000001_did_cache.sql  20250106000001_admin_moderation.sql  20250107000001_blob_metadata_extensions.sql  20250108000001_temp_blob_table.sql  20250109000001_plc_keys.sql
migrations/postgres/: .gitkeep
scripts/: README.md  backup.ps1  backup.sh  restore.sh  setup-database.ps1  setup-database.sh
src/: auth.rs  config.rs  context.rs  error.rs  main.rs  metrics.rs  rate_limit.rs  server.rs
src/account/: manager.rs  mod.rs
src/actor_store/: mod.rs  models.rs  repository.rs  store.rs
src/admin/: invites.rs  labels.rs  mod.rs  moderation.rs  reports.rs  roles.rs
src/api/: admin.rs  admin_panel.rs.bak  blob.rs  firehose.rs  health.rs  identity.rs  labels.rs  middleware.rs  mod.rs  oauth_admin.rs  repo.rs  server.rs  sync.rs  well_known.rs
src/backup/: mod.rs
src/blob_store/: disk.rs  mod.rs  models.rs  s3.rs  store.rs
src/cache/: mod.rs
src/car/: encoder.rs  mod.rs
src/crypto/: mod.rs  plc.rs
src/db/: account.rs  mod.rs  postgres.rs
src/federation/: authentication.rs  discovery.rs  mod.rs  relay.rs  search.rs
src/identity/: cache.rs  mod.rs  resolver.rs
src/jobs/: mod.rs  tasks.rs
src/mailer/: mod.rs
src/rate_limit_new/: distributed.rs
src/sequencer/: events.rs  mod.rs  sequencer.rs
src/validation/: mod.rs
static/admin/: debug.html  index.html  login.css  login.html  login.js  script.js  style.css
tests/: admin_panel_tests.rs  interop_tests.rs
